# PleiadesHVAC

./: .gitignore  .python-version  README.md  buildingA-data_result.json  buildingB-data_result.json  buildingC-data_result.json  gather_metrics.sh  pyproject.toml  pyprojectEdge.toml  result.json  test.ipynb
baseline/: client_app.py  dataset.py  model.py  server_app.py
baseline/attacks/model_poisoning/: lie_attack.py
baseline/models/: __init__.py  lstm_model_builder.py
data/buildingA-data/: test.json
data/buildingB-data/: test.json
data/buildingC-data/: test.json
data/datasets/buildingA-data/: test.json
data/datasets/buildingB-data/: test.json
data/datasets/buildingC-data/: test.json
data/og/: data-model-consumoB-60T.csv  data-model-consumoC-60T.csv
data/scripts/: metrics.ipynb  preprocesado.ipynb
pleiadesHVAC/: aggregator.py  aggregator_client.py  client_app.py  dataset.py  model.py  server_app.py  strategies.py  strategy.py  utils.py
pleiadesHVAC_edge/: pyproject.toml
pleiadesHVAC_edge/edge/: aggregator.py  client_app.py  model.py  strategy.py
pleiadesHVAC_edge/edge/models/: __init__.py  gru_model_builder.py  transformer_model_builder.py
